/*
 * Copyright (C) 2024 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.android.car.appcard.protos;

option java_package = "com.android.car.appcard.internal.proto";

import "image.proto";

message ButtonMessage {
  optional string component_id = 1;
  optional string text = 2;
  optional ImageMessage image = 4;
  optional ButtonType type = 5;
}

enum ButtonType {
  PRIMARY = 0;  // Default
  SECONDARY = 1;
  NO_BACKGROUND = 2;
}
