/*
 * Copyright (C) 2024 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.android.car.appcard.protos;

option java_package = "com.android.car.appcard.internal.proto";

import "app_card.proto";
import "button.proto";
import "header.proto";
import "image.proto";
import "progress_bar.proto";

message ImageAppCardMessage {
  optional AppCardMessage app_card = 1;
  optional HeaderMessage header = 2;
  optional ImageMessage image = 3;
  optional string primary_text = 4;
  optional string secondary_text = 5;
  optional ButtonList button_list = 6;
  optional ProgressBarMessage progress_bar = 7;
}

message ButtonList {
  repeated ButtonMessage buttons = 1;
}
